--- a/survey-form/surveyform.css
+++ b/survey-form/surveyform.css
@@ -1,69 +1,82 @@
-body{
-    background: url(https://previews.123rf.com/images/gstockstudio/gstockstudio1504/gstockstudio150400401/39254789-businessman-at-work-close-up-top-view-of-man-working-on-laptop-while-sitting-at-the-wooden-desk.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-family: 'Roboto', sans-serif;
+body {
+  background: url(https://previews.123rf.com/images/gstockstudio/gstockstudio1504/gstockstudio150400401/39254789-businessman-at-work-close-up-top-view-of-man-working-on-laptop-while-sitting-at-the-wooden-desk.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-family: "Roboto", sans-serif;
+  margin: 0;
 }
-h1{
-    text-align: center;
-    color: white;
+#title {
+  text-align: center;
+  color: white;
+  margin-top: 0;
+  margin-bottom: 0.5rem;
 }
-#one{
-    text-align: center;
-    color: white;
+#description {
+  text-align: center;
+  color: white;
+  margin-bottom: 1.875rem;
 }
-.form-container{
-    width: 650px;
-    padding: 10px;
-    margin: auto;
-    background-color: floralwhite;
-}
-
-.greenbox{
-    text-align: center;
-    width: 600px;
-    padding: 5px;
-    margin: auto;
-    background-color: crimson;
-    cursor:pointer;
-    color: white;
-    border: none;
-}
-.greenbox:hover{
-    background-color: white;
-    color: black;
-    border: 1px solid;
-    border-radius: 10px;
+.survey-form {
+  width: 650px;
+  padding: 8px;
+  margin: auto;
+  background-color: floralwhite;
+  border-radius: 2px;
 }
 
-#name{
-    width: 90%;
-    border-radius: 60px;
-    padding: 10px;
+#submit {
+  text-align: center;
+  width: 600px;
+  padding: 5px;
+  margin: auto;
+  background-color: crimson;
+  cursor: pointer;
+  color: white;
+  border: none;
 }
-#email{
-    width: 90%;
-    font-family: "Lucida Console", "Courier New", monospace;
-    border-radius: 60px;
-    padding: 10px;
-}
-#age{
-    width: 90%;
-    font-family: "Lucida Console", "Courier New", monospace;
-    border-radius: 60px;
-    padding: 10px;
-}
-#Questions1{
-    width: 90%;
-    font-family: "Lucida Console", "Courier New", monospace;
-    border-radius: 60px;
-    padding: 10px;
-}
-#Questions2{
-    width: 90%;
-    font-family: "Lucida Console", "Courier New", monospace;
-    border-radius: 60px;
-    padding: 10px;
+#submit:hover {
+  background-color: white;
+  color: black;
+  border: 1px solid;
+  border-radius: 10px;
 }
 
-    
+#name {
+  width: 90%;
+  border-radius: 60px;
+  padding: 10px;
+  margin: 0px 3px 10px;
+}
+#email {
+  width: 90%;
+  font-family: "Lucida Console", "Courier New", monospace;
+  border-radius: 60px;
+  padding: 10px;
+  margin: 0px 4px 10px;
+}
+#number {
+  width: 90%;
+  font-family: "Lucida Console", "Courier New", monospace;
+  border-radius: 60px;
+  padding: 10px;
+  margin: 0px 4px 20px;
+}
+#dropdown {
+  width: 90%;
+  font-family: "Lucida Console", "Courier New", monospace;
+  border-radius: 60px;
+  padding: 10px;
+  margin: 0px 3px 20px;
+}
+#Questions1 {
+  width: 90%;
+  font-family: "Lucida Console", "Courier New", monospace;
+  border-radius: 60px;
+  padding: 10px;
+  margin: 0px 3px 20px;
+}
+
+#comment {
+  width: 70%;
+  padding: 20px;
+}
