--- a/portfolio page/port.css
+++ b/portfolio page/port.css
@@ -159,7 +159,9 @@ header{
     flex-direction: row;
     justify-content:center;
     gap: 2rem;
-    padding: 1rem;
+    width: 100%;
+    flex-wrap: wrap;
+    padding: 0;
 }
 
 .contactlink{
@@ -194,8 +196,12 @@ header{
 
 footer{
     background-color: #303841;
-    display: flex;
+   
+}
+
+footer #ending{
     flex-direction: row;
+    display: flex;
     font-size: 1rem;
     height: 5rem;
     color: white;
@@ -240,6 +246,7 @@ footer{
 @media screen and (max-width: 724px) {
     .contactlink ul{
         justify-content:space-evenly ;
+        width: 80%
     }
 }
 
@@ -251,3 +258,26 @@ footer{
         position: relative;
     }
 }
+
+@media screen and (max-width: 797px) {
+    .contactlink ul{
+        width: 70%;
+        justify-content: center;
+        margin: auto;
+    }
+}
+
+@media screen and (max-width: 766px) {
+    footer #ending{
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 546px) {
+    footer #ending{
+        height: 7rem;
+        font-size: 14px;        
+
+    }
+}
+
